# OpenGEC

./: .gitignore  ALL_BUILD.vcxproj.filters  BuildIntructions.md  CMakeLists.txt  OpenGEC.vcxproj.filters  README.md  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  imgui.ini
res/: main.lua  quad.fs  textured.vs
src/: OpenGEC.h  main.cpp
src/OpenGEC/: Application.h  Audio.h  Compiler.h  Entrypoint.h  Opengl.h  Serialization.h  Shader.h  Texture.h  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
src/OpenGEC/glad/: glad.c  glad.h
src/OpenGEC/sol/: sol.hpp
